<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/background_title">

        <TextView
            android:id="@+id/projet_name_in_configuration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:text="@string/project_name"
            android:textAlignment="gravity"
            android:textSize="30dp" />

        <Button
            android:id="@+id/projet_name_modify"
            android:layout_width="146dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:background="@drawable/button_shape"
            android:paddingRight="10dp"
            android:text="@string/modify_button_text" />
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:background="@color/background">

            <TextView
                android:id="@+id/description_project_textfield"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/description_text_default"
                android:textSize="20dp">

            </TextView>
        </ScrollView>
    </TableRow>

    <TableRow
        android:background="@color/background_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/step_text_label"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_column="0"
            android:paddingRight="10dp"
            android:text="@string/Step_Menu"
            android:textAlignment="gravity"
            android:textSize="30dp" />


        <Button
            android:id="@+id/add_step_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:background="@drawable/button_shape"
            android:text="@string/add_button_text" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="@color/background"
        >

        <ScrollView
            android:layout_width="351dp"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:background="@color/background">

            <LinearLayout
                android:id="@+id/AddStepLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:layout_weight="4"
                android:orientation="vertical">


            </LinearLayout>
        </ScrollView>
    </TableRow>
    <TableRow
        android:background="@color/background_title"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        >

        <TextView
            android:layout_column="0"
            android:text="@string/Total_Title"
            android:textSize="25dp">
        </TextView>
        <TextView
            android:id="@+id/average_textView"
            android:layout_column="1"
            android:text="/20"
            android:textSize="25dp"
            android:paddingRight="15dp"
            android:textAlignment="textEnd">
        </TextView>
    </TableRow>
</TableLayout>